src/styles/notifications.css
.notifications-container {
    padding: 8px;
    height: fit-content;
    width: 360px;
    background-color: white;
    border-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    display: flex;
    flex-direction: column;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.notifications-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 5px;
}

.notifications-title {
    font-size: 25px;
}

.more-button.notifcations {
    height: 30px;
    display: flex;
    border-radius: 50%;
    padding: 3px;
}

.notifications {
    display: flex;
    flex-direction: column;
    margin-top: 15px;
}

.notifications-list {
    list-style-type: none;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.notification {
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 8px;
    border-radius: 8px;
}

.notification:hover, .see-all-notifications-link:hover, .more-button.notifcations:hover  {
    cursor: pointer;
    background-color: #F0F2F5;
}

.notification-avatar {
    height: 40px;
    border-radius: 50%;
}

.see-all-notifications {
    display: flex;
    justify-content: space-between;
    padding-right: 5px;
    font-size: 14px;
    align-items: center;
    padding-left: 8px;
    margin-bottom: 5px;
}

.see-all-notifications > h4 {
    font-size: 16px;
}

.see-all-notifications-link {
    padding: 8px;
    border-radius: 5px;
    color: #1969D2;
}

